--- a/src/App.css
+++ b/src/App.css
@@ -30,9 +30,32 @@
   bottom: 50%;
   left: 50%;
   right: 50%;
+}
+
+.middle_inner {
+  position: absolute; 
+  left: -10px;
+  top: -10px;
+
   width: 20px;
   height: 20px;
   border-radius: 20px;
-  border: 3px solid black;
-  background-color: mediumaquamarine;
+  border: 3px solid whitesmoke;
+  background-color: darkslategray;
+}
+
+.outer_hand {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  right: 50%;
+
+}
+
+.inner_hand {
+  position: absolute;
+  background-color:darkslategray;
+  border: 2px whitesmoke;
+  transform: translateX(-50%);
 }
