--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@
   text-align: center;
 }
 
+.tokei_face {
+  position: relative;
+
+  width: 100vw;
+  height: 100vw;
+
+  border: 2px solid gainsboro;
+  border-radius: 50%;
+  background: radial-gradient(ghostwhite, aliceblue);
+}
 .tokei_tick {
   position: absolute;
   top: 0;
@@ -40,7 +50,7 @@
   width: 20px;
   height: 20px;
   border-radius: 20px;
-  border: 3px solid whitesmoke;
+  border: 3px solid gainsboro;
   background-color: darkslategray;
 }
 
@@ -56,6 +66,15 @@
 .inner_hand {
   position: absolute;
   background-color:darkslategray;
-  border: 2px whitesmoke;
+  border: 1px solid whitesmoke;
   transform: translateX(-50%);
+}
+
+.face_text {
+  font-family: monospace;
+  color: black;
+  position: absolute;
+  padding-top: 20%;
+  width: 100%;
+  text-align: center;
 }
