--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,14 @@
   position: relative;
   left: -40px;
   width: 80px;
+  padding-top: 1px;
+  text-align: center;
+}
+
+.tokei_tick_secondary_symbol {
+  position: relative;
+  left: -40px;
+  width: 80px;
   padding-top: 10px;
   text-align: center;
 }
