--- a/src/ToggleSwitch/ToggleSwitch.scss
+++ b/src/ToggleSwitch/ToggleSwitch.scss
@@ -1,7 +1,7 @@
 // Colors
-$label-colour: teal;
+$label-colour: #111111;
 $disabled-colour: #ddd;
-$toggle-colour: midnightblue;
+$toggle-colour: crimson;
 $white: #fff;
 
 .toggle-switch {
