--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
+.container {
+  background-color: #333333;
+  padding-right: 4px;
+  border: 3px solid #333333;
+}
+
 .face {
   text-align: center;
   position: relative;
-  width: 100vw;
-  height: 100vw;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
 }
 
@@ -12,7 +18,7 @@
 }
 
 .wadokei_face {
-  border: 2px solid goldenrod1;
+  border: 2px solid midnightblue;
 }
 
 .tokei_tick {
@@ -114,11 +120,9 @@
   text-align: center;
 }
 
-
-
 .day_segment {
   position: absolute;
-  width: 100vw;
-  height: 100vw;
+  width: 100%;
+  height: 100%;
   border-radius: 100%;
 }
